--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <div class="column">
           <div class="card" >
             <div class="icon-wrapper">
-              <img class="img" src="css/tp1table.png" alt="">
+              <img class="img" src="tp1table.png" alt="">
             </div>
             <h3>TP  01</h3>
             <p>
               Tracer une table avec des chese en utilise blender .
             </p>
             <br>
-            <a class="btn" href="css/tp1.blend" target="_blank" >Voir le projet</a>
+            <a class="btn" href="tp1.blend" target="_blank" >Voir le projet</a>
           </div>
         </div>
         <div class="column">
           <div class="card">
             <div class="icon-wrapper">
-              <img class="img" src="css/donuts.jpeg" alt="">
+              <img class="img" src="donuts.jpeg" alt="">
             </div>
             <h3>TP 02</h3>
             <p> Construire des donuts avec une chocolats fondus dessus </p>
             
-            <a class="btn" href="css/tp2.blend" target="_blank" >Voir le projet</a>      
+            <a class="btn" href="tp2.blend" target="_blank" >Voir le projet</a>      
           </div>
         </div>
        
